...
  String get customMessagePoll => 'Poll';

  @override
  String get customMessageSticker => 'Sticker';

  @override
  String get customMessageDocument => 'Document';

  @override
  String get customMessageWhiteboard => 'Whiteboard';

  @override
  String get online => 'Online';
...
  String get close => 'Close';

  @override
  String get enterGroupName => 'Enter group name';

  @override
  String get addMembers => 'Add Members';

  @override
  String get sendMessage => 'Send Message';

  @override
  String get unblockUser => 'Unblock User';
...
  String get audioCall => 'Audio call';

  @override
  String get loading => 'Loading...';

  @override
  String get reply => 'Reply';

  @override
  String get replies => 'Replies';

  @override
  String get launch => 'Launch';
...
  String get add => 'Add';

  @override
  String get noBannedMembersFound => 'No banned members found';

  @override
  String get bannedMembers => 'Banned Members';

  @override
  String get name => 'Name';

  @override
  String get scope => 'Scope';
...
  String get reportProblem => 'Report a Problem';

  @override
  String get groupMembers => 'Group Members';

  @override
  String get ban => 'Ban';

  @override
  String get kick => 'Kick';

  @override
  String get pickYourEmoji => 'Pick your emoji';

  @override
  String get privateGroup => 'Private Group';
...
  String get imageLibrary => 'Image Library';

  @override
  String get videoLibrary => 'Video Library';

  @override
  String get message => 'Message';

  @override
  String get noMessagesHereYet => 'No Messages here yet';

  @override
  String get selectReaction => 'Select Reaction';
...

  @override
  String get changeScopeSubtitle =>
      'You can change roles to manage group permissions and responsibilities.';

  @override
  String get remove => 'Remove';

  @override
  String get admin => 'Admin';

  @override
  String get unsupportedMessageType => "This message type is not supported";
...
  String get areYouSureRemove => 'Are you sure you want to remove';

  @override
  String get attachDocument => 'Attach Document';

  @override
  String get camera => 'Camera';

  @override
  String get hourAgo => 'hour ago';

  @override
  String get hoursAgo => 'hours ago';
...
