...
}

/// Returns the label for each format type.
String _getLabelForFormat(FormatType formatType) {
  switch (formatType) {
    case FormatType.bold:
      return 'Bold';
    case FormatType.italic:
      return 'Italic';
    case FormatType.underline:
      return 'Underline';
    case FormatType.strikethrough:
      return 'Strikethrough';
...
